[tool.poetry]
name = "calendar-main"
version = "0.1.0"
description = ""
authors = ["gmh4589 <40pjanyh.obezjan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kivy = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
